# reinforcement_learning

./: ROSNode.py  UAVController.py  data_filter.py  est_local_pos.py  obstacle_description.py  package.xml  pid.py  program1.py  program2.py  program2a.py  program2b.py  program3.py  readme.md  sac.py  test.py  vicon_node.py
csv/: 18-17:11:39.csv  18-17:31:13.csv  18-17:34:03.csv  19-13:25:25.csv  19-13:40:31.csv  19-13:56:01.csv  19-14:09:26.csv  19-14:24:11.csv  19-14:32:25.csv  21-11:40:53.csv  21-11:47:40.csv  21-11:49:05.csv  21-11:49:40.csv  21-11:51:03.csv  21-11:53:28.csv  21-11:55:43.csv  21-12:00:31.csv  21-12:09:28.csv  21-12:24:55.csv  21-12:29:30.csv  21-12:31:21.csv  21-12:35:32.csv  21-12:39:16.csv  21-12:43:20.csv  21-14:01:44.csv  21-14:36:55.csv  21-14:41:17.csv  21-14:42:41.csv  21-14:43:44.csv  21-14:45:52.csv  21-14:47:02.csv  21-14:50:23.csv  21-14:51:48.csv  21-14:53:06.csv  21-14:54:38.csv  21-14:56:01.csv  21-14:57:49.csv  21-15:00:05.csv  21-15:01:21.csv  24-16:45:41.csv  (+68 more)
datas/: 123.csv
models/: policy_net  soft_q_net  target_value_net  value_net
real_flight_validation/: CMakeLists.txt  UAVController.py  iris.sdf  obstacle_description.py  pass_hole.py  print_location.py  program2.py  qgc_param.param  readme.md  requirements.txt  run_square.py  sac.py  test_torch_upbpard.py
real_flight_validation/models/: policy_net  soft_q_net  target_value_net
